--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,11 @@
 [flake8]
-max-line-length = 99
+max-line-length = 120
+max-function-length = 50
+ignore = CFQ002, CFQ004, W503, W504
 exclude = **/migrations/*,venv
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = oc_lettings_site.settings
-python_files = tests.py
+python_files = tests.py test_*.py *_tests.py
 addopts = -v
+filterwarnings = ignore::DeprecationWarning
