--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,49 @@
-django==3.0
+alabaster==0.7.16
+asgiref==3.7.2
+Babel==2.14.0
+certifi==2023.11.17
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+coverage==7.4.0
+Django==3.0
+django-environ==0.11.2
+docutils==0.20.1
+entrypoints==0.3
+environ==1.0
+exceptiongroup==1.2.0
 flake8==3.7.0
+flake8-functions==0.0.8
+flake8-html==0.4.3
+idna==3.6
+imagesize==1.4.1
+iniconfig==2.0.0
+Jinja2==3.1.3
+MarkupSafe==2.1.4
+mccabe==0.6.1
+mr-proper==0.0.7
+packaging==23.2
+pluggy==1.3.0
+pycodestyle==2.5.0
+pyflakes==2.1.1
+Pygments==2.17.2
+pytest==7.4.4
+pytest-cov==4.1.0
 pytest-django==3.9.0
-environ~=1.0
+pytz==2023.3.post1
+requests==2.31.0
+sentry-sdk==1.39.1
+six==1.16.0
+snowballstemmer==2.2.0
+Sphinx==7.2.6
+sphinxcontrib-applehelp==1.0.8
+sphinxcontrib-devhelp==1.0.6
+sphinxcontrib-htmlhelp==2.0.5
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.7
+sphinxcontrib-serializinghtml==1.1.10
+sqlparse==0.4.4
+stdlib-list==0.10.0
+tomli==2.0.1
+typing_extensions==4.9.0
+urllib3==2.1.0
