--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ Sphinx==7.2.6
 sphinxcontrib-applehelp==1.0.8
 sphinxcontrib-devhelp==1.0.6
 sphinxcontrib-htmlhelp==2.0.5
+sphinx-rtd-theme==2.0.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.7
 sphinxcontrib-serializinghtml==1.1.10
