--- a/setup.cfg
+++ b/setup.cfg
@@ -9,3 +9,9 @@ DJANGO_SETTINGS_MODULE = oc_lettings_site.settings
 python_files = tests.py test_*.py *_tests.py
 addopts = -v
 filterwarnings = ignore::DeprecationWarning
+
+[MASTER]
+load-plugins=pylint_json2html
+
+[REPORTS]
+output-format=jsonextended
