--- a/.github/workflows/Integration.yml
+++ b/.github/workflows/Integration.yml
@@ -27,9 +27,9 @@ jobs:
         pip install -r requirements.txt
     - name: 'Create env file'
       run: |
-        touch .env
-        echo SECRET_KEY="django-insecure-qi38c=fp$9^593hsriajg$_%=5trot9g!1qa@ew(o-1#@=&4%=hp46(s" >> .env
-        cat .env
+        touch oc_lettings_site/.env
+        echo SECRET_KEY="django-insecure-qi38c=fp$9^593hsriajg$_%=5trot9g!1qa@ew(o-1#@=&4%=hp46(s" >> oc_lettings_site/.env
+        cat oc_lettings_site/.env
     - name: Run Tests
       run: |
         pytest
