--- a/.github/workflows/Integration.yml
+++ b/.github/workflows/Integration.yml
@@ -29,6 +29,7 @@ jobs:
       run: |
         touch oc_lettings_site/.env
         echo SECRET_KEY="django-insecure-qi38c=fp$9^593hsriajg$_%=5trot9g!1qa@ew(o-1#@=&4%=hp46(s" >> oc_lettings_site/.env
+        echo ENV_SENTRY="TEST"  >> oc_lettings_site/.env
         cat oc_lettings_site/.env
     - name: Run Tests
       run: |
