--- a/setup.cfg
+++ b/setup.cfg
@@ -7,3 +7,8 @@ DJANGO_SETTINGS_MODULE = oc_lettings_site.settings
 python_files = tests.py test_*.py *_tests.py
 addopts = -v
 filterwarnings = ignore::DeprecationWarning
+
+[MASTER]
+ignore-paths=^doc/.*$,
+             ^lettings/migrations/.*$,
+             ^lettings/tests/.*$
