--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,5 @@ python_files = tests.py test_*.py *_tests.py
 addopts = -v
 filterwarnings = ignore::DeprecationWarning
 
-[MASTER]
-ignore-paths=^doc/.*$,
-             ^lettings/migrations/.*$,
-             ^lettings/tests/.*$
+[pylint.MASTER]
+ignore=migrations
