--- a/.github/workflows/Integration.yml
+++ b/.github/workflows/Integration.yml
@@ -39,4 +39,4 @@ jobs:
         flake8
     - name: Analysing the code with pylint
       run: |
-        pylint $(git ls-files '*.py')
+        pylint */*.py */tests/*.py
