final touch (i hope)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
 
     build: . 
 
-    #command: python manage.py runserver 0.0.0.0:8000 
+    #command: python manage.py runserver 0.0.0.0:8000 jps
 
     volumes:
       - .:/app 
@@ -14,4 +14,4 @@ services:
     ports: 
       - '8000:8000'
 
-    entrypoint: /app/entrypoint.sh   
+    entrypoint: /app/start.sh   
