final touch (i hope)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
 
     build: . 
 
-    #command: python manage.py runserver 0.0.0.0:8000 jps
+    #command: python manage.py runserver 0.0.0.0:8000
 
     volumes:
       - .:/app 
