--- a/.github/workflows/Integration.yml
+++ b/.github/workflows/Integration.yml
@@ -28,9 +28,14 @@ jobs:
     - name: 'Create env file'
       run: |
         touch oc_lettings_site/.env
-        echo SECRET_KEY="django-insecure-qi38c=fp$9^593hsriajg$_%=5trot9g!1qa@ew(o-1#@=&4%=hp46(s" >> oc_lettings_site/.env
-        echo ENV_SENTRY="TEST"  >> oc_lettings_site/.env
+        echo SECRET_KEY=${SECRET_KEY} >> oc_lettings_site/.env
+        echo ENV_SENTRY=${ENV_SENTRY}  >> oc_lettings_site/.env
+        echo SENTRY_KEY=${SENTRY_KEY}  >> oc_lettings_site/.env
         cat oc_lettings_site/.env
+      env:
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        ENV_SENTRY: ${{ secrets.ENV_SENTRY }}
+        SENTRY_KEY: ${{ secrets.SENTRY_KEY }}
     - name: Run Tests
       run: |
         pytest
